--- a/RecipesProject/Views/Shared/_Layout.cshtml
+++ b/RecipesProject/Views/Shared/_Layout.cshtml
@@ -45,7 +45,11 @@
             @RenderBody()
         </main>
     </div>
-
+    <style>
+        .navbar {
+            height: 60px;
+        }
+    </style>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - RecipesProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
